openEuler_test/update_test/docker/docker-pip3安装失败.txt
# 标题
pkgcmd “docker-pip3安装失败”

# 基本信息
- 测试用例: oe_test_python_pip_install oe_test_python_urllib3_urlopen_02
- 系统版本: openEuler-24.03-LTS-SP3(aarch64/x86_64)

# 问题现象
pip3安装失败

# 错误日志
pip3 install --user requests
Collecting requests
  Downloading requests-2.33.0-py3-none-any.whl.metadata (5.1 kB)
Collecting charset_normalizer<4,>=2 (from requests)
  Downloading charset_normalizer-3.4.6-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl.metadata (40 kB)
     ━━━━━━━━━━                               10.2/40.6 kB ? eta -:--:--
ERROR: Exception:
Traceback (most recent call last):
  File "/usr/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py", line 452, in _error_catcher
    yield
  File "/usr/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py", line 575, in read
    data = self._fp_read(amt) if not fp_closed else b""
           ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py", line 541, in _fp_read
    return self._fp.read(amt) if amt is not None else self._fp.read()
           ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/site-packages/pip/_vendor/cachecontrol/filewrapper.py", line 98, in read
    data: bytes = self.__fp.read(amt)
                  ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/http/client.py", line 471, in read
    s = self.fp.read(amt)
        ^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/socket.py", line 718, in readinto
    return self._sock.recv_into(b)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/ssl.py", line 1311, in recv_into
    return self.read(nbytes, buffer)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/ssl.py", line 1167, in read
    return self._sslobj.read(len, buffer)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TimeoutError: The read operation timed out


pip3 install fake_useragent
Collecting fake_useragent
  Using cached fake_useragent-2.2.0-py3-none-any.whl.metadata (17 kB)
Downloading fake_useragent-2.2.0-py3-none-any.whl (161 kB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━                102.4/161.7 kB 5.7 kB/s eta 0:00:11
ERROR: Exception:
Traceback (most recent call last):
  File "/usr/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py", line 452, in _error_catcher
    yield
  File "/usr/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py", line 575, in read
    data = self._fp_read(amt) if not fp_closed else b""
           ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py", line 541, in _fp_read
    return self._fp.read(amt) if amt is not None else self._fp.read()
           ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/site-packages/pip/_vendor/cachecontrol/filewrapper.py", line 98, in read
    data: bytes = self.__fp.read(amt)
                  ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/http/client.py", line 471, in read
    s = self.fp.read(amt)
        ^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/socket.py", line 718, in readinto
    return self._sock.recv_into(b)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/ssl.py", line 1311, in recv_into
    return self.read(nbytes, buffer)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/ssl.py", line 1167, in read
    return self._sslobj.read(len, buffer)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TimeoutError: The read operation timed out


# 问题根因
网络原因，导致安装超时

# 解决方案
执行用例之前配置一个可以访问的pip源，如下所示：
mkdir ~/.pip
echo "[global]
index-url = https://mirrors.aliyun.com/pypi/simple" > ~/.pip/pip.conf
